gccida/g0/clear_dead_regs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_dead_regs/src/regrename.c:591:49: error: must use 'enum' tag to refer to type 'machine_mode'
void  clear_dead_regs( HARD_REG_ELT_TYPE *pset, machine_mode kind, rtx notes) 
                                                ^
                                                enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_dead_regs/src/regrename.c:641:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)reg + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_dead_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_dead_regs/src/regrename.c:642:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)reg + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_dead_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_dead_regs/src/regrename.c:661:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
notes = ( rtx)notes[1]; 
              ^~~~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_dead_regs/src/obj/regrename.o] Error 1
